k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drink-backend
  namespace: christians-drinks
  labels:
    app: drink-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drink-backend
  template:
    metadata:
      labels:
        app: drink-backend
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: drink-backend
          image: ghcr.io/janne6565/drinkmanagerbackend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/drinks
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/drinks
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: drink-backend
  namespace: christians-drinks
spec:
  selector:
    app: drink-backend
  ports:
    - port: 8080
      targetPort: 8080
